# kawa-session-manager

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
proto/: session_manager.proto
src/: grpc_server.rs  main.rs  models.rs  repository.rs
src/handlers/: create_stream.rs  get_stream.rs  mod.rs  remove_stream.rs
